# docs

./: .gitignore  .gitlab-ci.yml  .gitmodules  .helmignore  .markdownlint.json  .readthedocs.yml  .spellcheck.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Chart.yaml  Dangerfile  Dockerfile  Gemfile  Light_Install.hi  Light_Install.rst  Makefile  NOTICE.txt  PULL_REQUEST_REVIEW_ITEMS.md  Pipfile  README.md  REDIRECT_COMPLETION_STATUS.md  Rakefile  benefits-us.rst  comprehensive_redirect_analysis.py  convert-links.py  dependencies.yml  deps.yml  dictionary.dic  fix_config_settings.py  generate_pdfs.py  log.txt  make.bat  manifest.yaml  mattermost_on_raspberry_pi  pyproject.toml  rate-limit.rst  recruitment.rst  requirements.txt  requirements.yaml  (+4 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.yaml  copilot-instructions.md
certification/: AI-PROMPT-PROFESSIONAL-CERTIFICATION-CONTENT.md
dependencies_io/: git_repos.yml
deployment/: scaling.rst
doc/: INSTALL.md  README.md  example-config.yaml  external-database.md  index.md
examples/: README.md  eks_loadbalancer_annotations.yml  i2p-values-minimal.yaml  index.md  values-base.yaml  values-certificates.yaml  values-external-database.yaml  values-external-objectstorage.yaml  values-external-objectstroage.yaml  values-gke-minimum.yaml  values-incoming-email.yaml  values-minikube-minimum.yaml  values-minikube.yaml
extensions/: README.md
mobile/: mattermost-webrtc-guide.html  mattermost-webrtc-guide.rst
overview/: features.html  features.rst  resellers.rst
scripts/: Gemfile  changelog_manager.rb  (+23 more)
(+5813 files in other folders)
