[project]
name = "mattermost-docs"
version = "0.1.0"
description = "Mattermost product documentation"
requires-python = ">=3.12"
dependencies = [
    # Sphinx (https://www.sphinx-doc.org)
    # Release notes: https://www.sphinx-doc.org/en/master/changes.html
    # Repo: https://github.com/sphinx-doc/sphinx
    "sphinx==8.2.3",
    # Furo Theme (https://github.com/pradyunsg/furo)
    "furo==2024.8.6",
    # MyST Parser (https://myst-parser.readthedocs.io/en/latest/)
    # Release notes: https://myst-parser.readthedocs.io/en/latest/develop/_changelog.html
    # Repo: https://github.com/executablebooks/myst-parser
    "myst-parser==4.0.1",
    # Sphinx Autobuild (https://github.com/executablebooks/sphinx-autobuild)
    # Repo: https://github.com/executablebooks/sphinx-autobuild
    "sphinx-autobuild==2024.10.3",
    # Add a "copy" button to code blocks in Sphinx (https://sphinx-copybutton.readthedocs.io/en/latest/)
    # Repo: https://github.com/executablebooks/sphinx-copybutton
    "sphinx-copybutton==0.5.2",
    # MermaidJS support for Sphinx
    "sphinxcontrib-mermaid==1.0.0",
]

[dependency-groups]
dev = [
    # PyTest testing framework (https://docs.pytest.org/en/7.4.x/)
    "pytest==8.3.5",
    # Black: A Python source formatter
    "black==25.1.0",
    # Docutils Stubs
    "docutils-stubs==0.0.22",
]
